# mugenpen

./: Cargo.toml  README.md
src/: main.rs  math.rs
